# jax_ec_ai_lab

./: .dockerignore  .gitignore  .ignore  .pre-commit-config.yaml  API.md  DEVELOPMENT.md  LICENSE  README.md  backend.Dockerfile  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: lint.yml  tests.yml
demo/: eslint.config.js  frontend.Dockerfile  index.html  package-lock.json  package.json
demo/data_scripts/: consumption_profiles.py  generate_energy_sharing_puzzle.py  production_seasons.py  syntethic_profiles.py
demo/public/: simulation_config.json
demo/public/assets/: house_color.json
demo/src/: App.css  App.jsx  index.css
demo/src/components/: BarChart.jsx  BatteryEffectGraph.jsx  CommunityBuilderContainer.jsx  EnergyNetwork.jsx  GaugeBar.jsx  MultiBarChart.jsx  PixiSplash.jsx  ResultContext.jsx  SimulationConfigContext.jsx  SimulationSummary.jsx  SlideIndicator.css  SlideIndicator.jsx  Splash.jsx  StartSimulationButton.jsx
demo/src/data/: energySharingPuzzle.json  energy_consumption_ex.json  energy_production_ex.json  energy_profile_ex.json  prices.json
jax_ec/: README.md  __init__.py  eval.py  main.py  sim_runner.py  simulate.py  train.py
jax_ec/agents/: api.py  ppo.py  q_agent.py  rbc.py  types.py
jax_ec/agents/weights/: building_ppo_v1.pkl  manager_ppo_v1.pkl
jax_ec/configs/: config.yaml  default_2020.yaml  default_2023.yaml
jax_ec/configs/battery/: default.yaml
jax_ec/data/: README.md  artificial.py  dummy.py  load.py  template.json  types.py
jax_ec/environment/: __init__.py  battery.py  env.py  jaxmarl.py  spaces.py
jax_ec/experiments/: battery_nobattery.py  midpoint_notrade.py
jax_ec/utils/: battery.py  fairness.py  policy.py  rollout.py
requirements/: requirements.txt
results/: citylearn2020.json  citylearn2021.json
scripts/: push_to_demo.sh
server/: config_preconfigured.py  main.py  precompute_predefined.py
server/energy_profiles/: synthetic_energy_profiles.json
tests/: test_battery.py  test_demo.py  test_integration.py  test_rewards_no_exchange.py
tests/data/: jax_ec_data.json
tests/environment_api/: test_reset.py  test_step.py
tests/mechanisms/: test_double_auction.py  test_double_auction_env.py  test_midpoint.py  test_midpoint_env.py
(+68 files in other folders)
